@@ -13,6 +13,9 @@ v2.0.2
 ! mpaa_reason returned wrong text (tnx to dblume for report and fix!)
 + added method is_serial() to the movie classes to determine whether the selected
   entry is part of a TV series
+! again site changes at IMDB - fixed imdb::title_year(), imdb::thumbphoto(), and
+  imdb::country() with code sent by moonface (tnx!)
+
 
 v2.0.1 (23.05.2010)
 -------------------
